--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -11,16 +11,13 @@ menu {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    a {
-      padding: 1.5rem;
-      line-height: 0;
-      color: var(--color-text);
-      text-align: center;
-      width: 100%;
+    div {
+      padding: 1rem;
+      img {
+        width: 100%;
+      }
     }
-    img {
-      width: 100%;
-    }
+
     span {
       color: var(--color-text);
       text-align: center;
@@ -31,11 +28,10 @@ menu {
   a {
     cursor: pointer;
   }
-  .navlinks {
+  .nav-links {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    // border-top: 2px solid var(--color-background2);
     a {
       color: var(--color-text);
       text-align: center;
@@ -51,11 +47,11 @@ menu {
         transition-duration: 500ms;
         border-bottom: 2px solid var(--color-primary);
         color: var(--color-primary);
-        width: 85%;
+        width: 80%;
       }
     }
   }
-  .socialmedia {
+  .social-media {
     display: flex;
     justify-content: center;
     a {
