--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -4,12 +4,80 @@
   display: flex;
   flex-direction: column-reverse;
   flex: 1;
+  background-color: var(--color-background3);
   @include lg {
     flex-direction: row;
   }
-  .contact-form {
+  .contact-section {
     padding: 20px;
     flex: 1;
+    h2 {
+      color: var(--color-primary);
+    }
+    p {
+      color: white;
+      margin: 1rem 0;
+      span {
+      }
+    }
+    .form-container {
+      padding-top: 2rem;
+      form {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        .error {
+          border-bottom-color: var(--color-error);
+        }
+        .form-top {
+          display: flex;
+          gap: 0.5rem;
+        }
+        .error-message {
+          height: 30px;
+          padding-left: 0.5rem;
+          font-weight: 600;
+          p {
+            margin: 0;
+            color: var(--color-error);
+          }
+        }
+        input,
+        textarea {
+          border: 0;
+          border-bottom: 2px solid transparent;
+          transition: all cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.3s;
+          outline: none;
+          background-color: var(--color-background2);
+          font-size: 16px;
+          color: var(--color-text);
+          padding: 1rem 1.5rem;
+          &:focus {
+            border-bottom-color: var(--color-primary);
+          }
+        }
+        #submit {
+          border: 1px solid var(--color-primary);
+          background-color: transparent;
+          margin-left: auto;
+          cursor: pointer;
+          color: var(--color-primary);
+          font-size: 16px;
+          letter-spacing: 2px;
+          text-decoration: none;
+          position: relative;
+          width: 100%;
+          max-width: 220px;
+          display: block;
+          text-align: center;
+          &:hover {
+            transition: all ease-in-out 0.1s;
+            background-color: var(--color-primary);
+            color: black;
+          }
+        }
+      }
+    }
   }
   .google-map {
     flex: 1;
