--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,7 +2,9 @@ $color: (
   "primary": #04d9ff,
   "background": #0e1a21,
   "background2": #282828,
+  "background3": #1d1d1d,
   "text": #909096,
+  "error": #e50000,
 );
 
 :root {
