--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -4,83 +4,115 @@
   display: flex;
   flex-direction: column-reverse;
   flex: 1;
+  position: relative;
   background-color: var(--color-background3);
-  @include lg {
+  min-height: 100vh;
+  @include xl {
     flex-direction: row;
   }
   .contact-section {
+    @include xl {
+      width: 50%;
+      box-sizing: border-box;
+    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
-    flex: 1;
-    h2 {
-      color: var(--color-primary);
-    }
-    p {
-      color: white;
-      margin: 1rem 0;
-      span {
+    .contact-wrapper {
+      max-width: 600px;
+      h2 {
+        color: var(--color-primary);
       }
-    }
-    .form-container {
-      padding-top: 2rem;
-      form {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-        .error {
-          border-bottom-color: var(--color-error);
+      p {
+        color: white;
+        margin: 1rem 0;
+        span {
         }
-        .form-top {
+      }
+      .form-container {
+        padding-top: 2rem;
+        form {
           display: flex;
+          flex-direction: column;
           gap: 0.5rem;
-        }
-        .error-message {
-          height: 30px;
-          padding-left: 0.5rem;
-          font-weight: 600;
-          p {
-            margin: 0;
-            color: var(--color-error);
+          .error {
+            border-bottom-color: var(--color-error);
           }
-        }
-        input,
-        textarea {
-          border: 0;
-          border-bottom: 2px solid transparent;
-          transition: all cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.3s;
-          outline: none;
-          background-color: var(--color-background2);
-          font-size: 16px;
-          color: var(--color-text);
-          padding: 1rem 1.5rem;
-          &:focus {
-            border-bottom-color: var(--color-primary);
+          .form-top {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            gap: 0.5rem;
+            @include sm {
+              flex-direction: row;
+            }
+            input {
+              width: 100%;
+              box-sizing: border-box;
+              @include sm {
+                width: 50%;
+              }
+            }
           }
-        }
-        #submit {
-          border: 1px solid var(--color-primary);
-          background-color: transparent;
-          margin-left: auto;
-          cursor: pointer;
-          color: var(--color-primary);
-          font-size: 16px;
-          letter-spacing: 2px;
-          text-decoration: none;
-          position: relative;
-          width: 100%;
-          max-width: 220px;
-          display: block;
-          text-align: center;
-          &:hover {
-            transition: all ease-in-out 0.1s;
-            background-color: var(--color-primary);
-            color: black;
+          .error-message {
+            height: 30px;
+            padding-left: 0.5rem;
+            font-weight: 600;
+            p {
+              margin: 0;
+              color: var(--color-error);
+            }
+          }
+          input,
+          textarea {
+            border: 0;
+            border-bottom: 2px solid transparent;
+            transition: all cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.3s;
+            outline: none;
+            background-color: var(--color-background2);
+            font-size: 16px;
+            color: var(--color-text);
+            padding: 1rem 1.5rem;
+            &:focus {
+              border-bottom-color: var(--color-primary);
+            }
+          }
+          #submit {
+            border: 1px solid var(--color-primary);
+            background-color: transparent;
+            margin-left: auto;
+            cursor: pointer;
+            color: var(--color-primary);
+            font-size: 16px;
+            letter-spacing: 2px;
+            text-decoration: none;
+            position: relative;
+            width: 100%;
+            max-width: 220px;
+            display: block;
+            text-align: center;
+            &:hover {
+              transition: all ease-in-out 0.1s;
+              background-color: var(--color-primary);
+              color: black;
+            }
           }
         }
       }
     }
   }
   .google-map {
+    min-height: 260px;
     flex: 1;
+    @include md {
+      height: auto;
+      flex: 1;
+    }
+    @include xl {
+      width: 50%;
+      box-sizing: border-box;
+    }
     iframe {
       height: 100%;
       width: 100%;
