--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -1,66 +1,131 @@
+@import "../../styles/mixins.scss";
+
 menu {
-  height: 100vh;
+  position: relative;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: var(--color-background);
-  width: 130px;
-  .logo {
+  .mobile-nav {
+    @include lg {
+      visibility: hidden;
+    }
+    .hamburger-container {
+      a {
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        width: 50px;
+        height: 50px;
+        z-index: 2;
+        background-color: rgba(0, 0, 0, 0.3);
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        border-radius: 3px;
+        color: white;
+      }
+    }
+  }
+  .side-nav {
     display: flex;
+    background-color: var(--color-background);
+    height: 100vh;
     flex-direction: column;
-    justify-content: center;
-    div {
-      padding: 1rem;
-      img {
-        width: 100%;
+    justify-content: space-between;
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 10;
+    width: 260px;
+    transition: all 0.6s cubic-bezier(0.65, 0, 0.35, 1);
+    transform: translate(-100vw, 0);
+    @include lg {
+      transform: translate(0);
+      width: 160px;
+      position: relative;
+    }
+    &.toggled {
+      transform: translate(0);
+    }
+    .logo {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      div {
+        width: 130px;
+        padding: 1rem;
+        a {
+          display: block;
+          img {
+            width: 100%;
+          }
+        }
+      }
+      span {
+        color: var(--color-text);
+        text-align: center;
+        font-size: 14px;
       }
     }
-
-    span {
-      color: var(--color-text);
-      text-align: center;
-      font-size: 14px;
-    }
-  }
-
-  a {
-    cursor: pointer;
-  }
-  .nav-links {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     a {
-      color: var(--color-text);
-      text-align: center;
-      line-height: 3rem;
-      border-bottom: 2px solid var(--color-background2);
-      transition: all cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.3s;
-      width: 60%;
-      margin: 0 auto;
-      &:hover {
-        color: var(--color-primary);
-      }
-      &.selected {
-        transition-duration: 500ms;
-        border-bottom: 2px solid var(--color-primary);
-        color: var(--color-primary);
-        width: 80%;
-      }
+      cursor: pointer;
     }
-  }
-  .social-media {
-    display: flex;
-    justify-content: center;
-    a {
-      padding: 0.5rem;
-      color: var(--color-text);
-      &:hover {
+    .nav-links {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      a {
+        color: var(--color-text);
+        text-align: center;
+        line-height: 3rem;
+        border-bottom: 2px solid var(--color-background2);
         transition: all cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.3s;
-        color: var(--color-primary);
+        width: 50%;
+        margin: 0 auto;
+        @include lg {
+          width: 60%;
+        }
+        &:hover {
+          color: var(--color-primary);
+        }
+        &.selected {
+          transition-duration: 500ms;
+          border-bottom: 2px solid var(--color-primary);
+          color: var(--color-primary);
+          width: 60%;
+          @include lg {
+            width: 80%;
+          }
+        }
       }
     }
+    .social-media {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 1rem;
+      a {
+        padding: 0.5rem;
+        color: var(--color-text);
+        &:hover {
+          transition: all cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.3s;
+          color: var(--color-primary);
+        }
+      }
+    }
+  }
+  .blur-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100vw;
+    height: 100vh;
   }
 }
