--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -1,11 +1,11 @@
-// Small tablets and large smartphones (landscape view)
-$screen-sm-min: 576px;
+// Small tablets and large smartphones
+$screen-sm-min: 520px;
 
 // Small tablets (portrait view)
 $screen-md-min: 768px;
 
 // Tablets and small desktops
-$screen-lg-min: 992px;
+$screen-lg-min: 1024px;
 
 // Large tablets and desktops
-$screen-xl-min: 1200px;
+$screen-xl-min: 1440px;
