--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,7 +13,10 @@ $color: (
   }
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
   margin: 0;
 }
