--- a/src/pages/Projects/Projects.module.scss
+++ b/src/pages/Projects/Projects.module.scss
@@ -1,4 +1,5 @@
 .main-container {
+  background-color: var(--color-background3);
   padding: 0 2rem;
   width: 100%;
   display: flex;
@@ -13,6 +14,7 @@
       font-size: 2rem;
       text-align: center;
       margin-bottom: 2rem;
+      color: #c3c3c3;
     }
 
     .projects-list {
