Changes in Modal & Overlay

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,10 +1,76 @@
+@import "../../styles/mixins.scss";
+
 .container {
-  position: absolute;
+  position: relative;
+  box-sizing: content-box;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
-  width: 50vw;
-  height: 500px;
+  background-color: whitesmoke;
+  max-height: 100vh;
+  overflow-y: auto;
+  width: 100%;
   z-index: 15;
+  @include md {
+    width: 80vw;
+  }
+  button {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: whitesmoke;
+    border: none;
+    padding: 5px;
+    line-height: 0;
+    text-align: center;
+    border-radius: 2px;
+    cursor: pointer;
+    z-index: inherit;
+    transition: all ease-in-out 0.2s;
+    &:hover{
+      opacity: 0.9;
+    }
+    svg {
+      width: 20px;
+      height: 20px;
+    }
+  }
+  .img-container {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    img {
+      max-width: 100%;
+      height: auto;
+      object-fit: contain;
+      max-height: 400px;
+    }
+    a {
+      position: absolute;
+      bottom: 1rem;
+      display: block;
+      border: 1px solid var(--color-primary);
+      cursor: pointer;
+      font-size: 16px;
+      letter-spacing: 2px;
+      padding: 0.5rem 1rem;
+      width: fit-content;
+      margin: 0;
+      background-color: var(--color-primary);
+      color: black;
+      transition: all ease-in-out 0.2s;
+      text-decoration: none;
+      &:hover {
+        background-color: black;
+        color: var(--color-primary);
+      }
+    }
+  }
+  .text-container {
+    padding: 0 2rem;
+  }
 }
