--- a/src/components/Overlay/Overlay.module.scss
+++ b/src/components/Overlay/Overlay.module.scss
@@ -1,5 +1,5 @@
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-image: linear-gradient(
@@ -14,7 +14,7 @@
   );
   background-size: 8px 8px;
   opacity: 0.7;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 5;
 }
