--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   position: relative;
-  box-sizing: content-box;
+  // box-sizing: content-box;
   display: flex;
   flex-direction: column;
   position: fixed;
@@ -12,11 +12,12 @@
   background-color: whitesmoke;
   max-height: 100vh;
   overflow-y: auto;
-  width: 100%;
+  // width: 100%;
   z-index: 15;
   @include md {
-    width: 80vw;
+    // width: 80vw;
   }
+  width: fit-content;
   button {
     position: absolute;
     top: 0.5rem;
@@ -24,19 +25,19 @@
     background-color: rgba(0, 0, 0, 0.7);
     color: whitesmoke;
     border: none;
-    padding: 5px;
+    padding: 0;
     line-height: 0;
     text-align: center;
-    border-radius: 2px;
+    border-radius: 100%;
     cursor: pointer;
     z-index: inherit;
     transition: all ease-in-out 0.2s;
-    &:hover{
+    &:hover {
       opacity: 0.9;
     }
     svg {
-      width: 20px;
-      height: 20px;
+      width: 30px;
+      height: 30px;
     }
   }
   .img-container {
@@ -44,14 +45,14 @@
     justify-content: center;
     position: relative;
     img {
-      max-width: 100%;
       height: auto;
       object-fit: contain;
       max-height: 400px;
+      padding: 0 3rem 1rem 3rem;
     }
     a {
       position: absolute;
-      bottom: 1rem;
+      bottom: 2rem;
       display: block;
       border: 1px solid var(--color-primary);
       cursor: pointer;
