--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -2,15 +2,15 @@
 
 .project-card {
   position: relative;
-  width: 100%;
-  @include md {
-    width: calc(calc(100% / 2) - 0.5rem);
-  }
-  @include xl {
-    width: calc(calc(100% / 3) - 1rem);
-  }
-  max-width: 480px;
-  height: 340px;
+  // width: 100%;
+  // @include md {
+  //   width: calc(calc(100% / 2) - 0.5rem);
+  // }
+  // @include xl {
+  //   width: calc(calc(100% / 3) - 1rem);
+  // }
+  width: 480px;
+  height: 300px;
   overflow: hidden;
   cursor: pointer;
   &:hover img {
