minor fixes in Modal component

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -72,6 +72,9 @@
     }
   }
   .text-container {
-    padding: 0 2rem;
+    padding: 0 2rem 2rem 2rem;
+    letter-spacing: 0.5px;
+    line-height: 1.9em;
+    color: #172b4d;
   }
 }
