--- a/src/pages/Projects/Projects.module.scss
+++ b/src/pages/Projects/Projects.module.scss
@@ -15,11 +15,11 @@
 
   .projects {
     width: 100%;
-    max-width: 1440px;
+    max-width: 1412px;
     padding-bottom: 2rem;
     h1 {
       font-size: 2rem;
-      text-align: center;
+      // text-align: center;
       margin-bottom: 2rem;
       color: #c3c3c3;
     }
@@ -27,11 +27,12 @@
     .projects-list {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
-      @include md {
+      // justify-content: center;
+      // @include md {
         justify-content: flex-start;
-      }
+      // }
       align-items: center;
+      // justify-content: center;
       gap: 1rem;
     }
   }
