--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -9,12 +9,17 @@
   // @include xl {
   //   width: calc(calc(100% / 3) - 1rem);
   // }
-  width: 480px;
-  height: 300px;
+  // width: 480px;
+  // height: 300px;
+  max-width: 460px;
+  width: 100%;
+  aspect-ratio: 16/10;
   overflow: hidden;
   cursor: pointer;
+  box-shadow: 0px 0px 10px 0px #ffffff50;
   &:hover img {
-    transform: scale(1.2);
+    transform: scale(1.1);
+    filter: brightness(110%);
   }
   &:hover button {
     z-index: 5;
@@ -49,5 +54,6 @@
     height: 100%;
     object-fit: cover;
     transition: all ease-in-out 0.3s;
+    filter: brightness(80%);
   }
 }
