--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -21,11 +21,12 @@
     padding: 20px;
     .contact-wrapper {
       max-width: 600px;
+      letter-spacing: 0.5px;
+      line-height: 1.5rem;
       h2 {
         color: var(--color-primary);
       }
       p {
-        color: white;
         margin: 1rem 0;
         span {
         }
