--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -19,4 +19,6 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   margin: 0;
+  color: whitesmoke;
+  letter-spacing: 0.5px;
 }
