--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,6 @@
 $color: (
   "primary": #04d9ff,
+  "secondary": #ff8a1a,
   "background": #0e1a21,
   "background2": #282828,
   "background3": #1d1d1d,
@@ -17,6 +18,9 @@ $color: (
 
 body {
   font-family: "Montserrat", sans-serif;
+  p {
+    font-family: "Hind", sans-serif;
+  }
   font-weight: 500;
   margin: 0;
   color: whitesmoke;
