--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 2rem;
     .contact-wrapper {
       max-width: 600px;
       letter-spacing: 0.5px;
@@ -115,7 +115,7 @@
       box-sizing: border-box;
     }
     iframe {
-      height: 100%;
+      height: calc(100% - 4px);
       width: 100%;
     }
   }
