--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -16,7 +16,9 @@
   aspect-ratio: 16/10;
   overflow: hidden;
   cursor: pointer;
-  box-shadow: 0px 0px 10px 0px #ffffff50;
+  // box-shadow: 0px 0px 10px 0px #ffffff50;
+  // padding: 0.5rem;
+  // border: 1px solid var(--color-text);
   &:hover img {
     transform: scale(1.1);
     filter: brightness(110%);
