--- a/src/pages/Skills/Skills.module.scss
+++ b/src/pages/Skills/Skills.module.scss
@@ -1,4 +1,41 @@
-main{
-    background-color: var(--color-background3);
-    width: 100%;
+@import "../../styles/mixins.scss";
+
+.main-container {
+  padding: 2rem;
+  background-color: var(--color-background3);
+  width: 100%;
+  display: flex;
+  // justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  section {
+    width: 50%;
+  }
+  .graph-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    h2 {
+      font-weight: 500;
+      font-size: 26px;
+      text-align: center;
+      margin-bottom: 0;
+    }
+    .radar-container {
+      width: 100%;
+      max-width: 600px;
+      max-height: 600px;
+    }
+    .tech-stack {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      img {
+        height: 40px;
+        width: 40px;
+      }
+    }
+  }
 }
