--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -65,18 +65,17 @@
     @include xl {
       width: 50%;
     }
-    max-width: 550px;
-    span {
-      color: var(--color-primary);
-      font-size: 3rem;
-    }
-    h2 {
-      font-size: 2.5rem;
+    max-width: 620px;
+
+    h1 {
       margin-bottom: 4rem;
+      span {
+        color: var(--color-primary);
+        font-size: 110%;
+      }
     }
     p {
       font-size: 18px;
-      line-height: 1.5rem;
     }
   }
 }
