--- a/src/pages/Skills/Skills.module.scss
+++ b/src/pages/Skills/Skills.module.scss
@@ -8,6 +8,10 @@
   // justify-content: center;
   align-items: center;
   gap: 2rem;
+  flex-direction: column;
+  @include lg {
+    flex-direction: row;
+  }
   section {
     width: 50%;
   }
@@ -18,8 +22,6 @@
     align-items: center;
     gap: 2rem;
     h2 {
-      font-weight: 500;
-      font-size: 26px;
       text-align: center;
       margin-bottom: 0;
     }
