--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,36 +1,79 @@
 @import "../../styles/mixins.scss";
 
-.container {
-  position: relative;
-  // box-sizing: content-box;
-  display: flex;
-  flex-direction: column;
+.modal-container {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: whitesmoke;
-  max-height: 100vh;
-  overflow-y: auto;
-  // width: 100%;
   z-index: 15;
+  // margin: 3rem 2rem;
+  // width: 90vw;
+  height: 100%;
+  max-width: 760px;
   @include md {
-    // width: 80vw;
+    width: max-content;
   }
-  width: fit-content;
-  button {
+  .modal {
+    margin: 3rem 2rem;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-background3);
+    overflow-y: scroll;
+    width: fit-content;
+    max-height: calc(100% - 4rem);
+    .img-container {
+      display: flex;
+      justify-content: center;
+      position: relative;
+      img {
+        height: auto;
+        object-fit: contain;
+        width: 100%;
+        // padding: 0 3rem 1rem 3rem;
+        margin-bottom: 1rem;
+      }
+    }
+    a {
+      border: 1px solid var(--color-primary);
+      background-color: transparent;
+      margin-left: 2rem;
+      cursor: pointer;
+      color: var(--color-primary);
+      font-size: 16px;
+      letter-spacing: 2px;
+      text-decoration: none;
+      position: relative;
+      width: 100%;
+      max-width: 220px;
+      display: block;
+      text-align: center;
+      padding: 1rem 1.5rem;
+      &:hover {
+        transition: all ease-in-out 0.1s;
+        background-color: var(--color-primary);
+        color: black;
+      }
+    }
+    .text-container {
+      padding: 0 2rem 2rem 2rem;
+      letter-spacing: 0.5px;
+      line-height: 1.9em;
+      // color: #172b4d;
+    }
+  }
+  .btn-close {
     position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    background-color: rgba(0, 0, 0, 0.7);
+    top: -30px;
+    right: -30px;
+    // background-color: rgba(0, 0, 0, 0.7);
     color: whitesmoke;
     border: none;
     padding: 0;
     line-height: 0;
     text-align: center;
-    border-radius: 100%;
+    // border-radius: 100%;
     cursor: pointer;
-    z-index: inherit;
+    z-index: 20;
     transition: all ease-in-out 0.2s;
     &:hover {
       opacity: 0.9;
@@ -39,42 +82,5 @@
       width: 30px;
       height: 30px;
     }
-  }
-  .img-container {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    img {
-      height: auto;
-      object-fit: contain;
-      max-height: 400px;
-      padding: 0 3rem 1rem 3rem;
-    }
-    a {
-      position: absolute;
-      bottom: 2rem;
-      display: block;
-      border: 1px solid var(--color-primary);
-      cursor: pointer;
-      font-size: 16px;
-      letter-spacing: 2px;
-      padding: 0.5rem 1rem;
-      width: fit-content;
-      margin: 0;
-      background-color: var(--color-primary);
-      color: black;
-      transition: all ease-in-out 0.2s;
-      text-decoration: none;
-      &:hover {
-        background-color: black;
-        color: var(--color-primary);
-      }
-    }
-  }
-  .text-container {
-    padding: 0 2rem 2rem 2rem;
-    letter-spacing: 0.5px;
-    line-height: 1.9em;
-    color: #172b4d;
   }
 }
