minor fix in Modal styles

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -6,8 +6,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 15;
-  // margin: 3rem 2rem;
-  // width: 90vw;
   height: 100%;
   max-width: 760px;
   @include md {
@@ -18,7 +16,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--color-background3);
-    overflow-y: scroll;
+    overflow-y: auto;
     width: fit-content;
     max-height: calc(100% - 4rem);
     .img-container {
@@ -29,7 +27,6 @@
         height: auto;
         object-fit: contain;
         width: 100%;
-        // padding: 0 3rem 1rem 3rem;
         margin-bottom: 1rem;
       }
     }
@@ -58,20 +55,17 @@
       padding: 0 2rem 2rem 2rem;
       letter-spacing: 0.5px;
       line-height: 1.9em;
-      // color: #172b4d;
     }
   }
   .btn-close {
     position: absolute;
-    top: -30px;
-    right: -30px;
-    // background-color: rgba(0, 0, 0, 0.7);
+    top: 1rem;
+    right: 0;
     color: whitesmoke;
     border: none;
     padding: 0;
     line-height: 0;
     text-align: center;
-    // border-radius: 100%;
     cursor: pointer;
     z-index: 20;
     transition: all ease-in-out 0.2s;
