--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -39,8 +39,9 @@
     line-height: 20px;
   }
   img {
+    aspect-ratio: 16/10;
+    background-color: lightgray;
     width: 100%;
-    height: 100%;
     object-fit: cover;
     transition: all ease-in-out 0.3s;
     filter: brightness(80%);
