--- a/src/pages/Skills/Skills.module.scss
+++ b/src/pages/Skills/Skills.module.scss
@@ -16,7 +16,7 @@
     width: 50%;
   }
   .graph-container {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,6 +24,9 @@
     h2 {
       text-align: center;
       margin-bottom: 0;
+    }
+    @include lg {
+      width: 50%;
     }
     .radar-container {
       width: 100%;
