--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -75,6 +75,7 @@ nav {
           color: var(--color-primary);
           img {
             width: 100%;
+            aspect-ratio: 103/117;
           }
         }
       }
