--- a/src/pages/Skills/Skills.module.scss
+++ b/src/pages/Skills/Skills.module.scss
@@ -12,8 +12,48 @@
   @include lg {
     flex-direction: row;
   }
-  section {
+  .skills {
     width: 50%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .player {
+      max-width: 600px;
+    }
+    .text {
+      h3 {
+        text-align: start;
+        margin-top: 0;
+        // margin-left: -2rem;
+        animation: slideInFromLeft 1s cubic-bezier(0.65, 0, 0.35, 1) forwards;
+        transform: translateX(-100%);
+        opacity: 0;
+      }
+
+      > :nth-child(1) {
+        animation-delay: 0.5s;
+      }
+
+      > :nth-child(2) {
+        animation-delay: 0.7s;
+      }
+
+      > :nth-child(3) {
+        animation-delay: 0.9s;
+      }
+      @keyframes slideInFromLeft {
+        0% {
+          transform: translateX(-100%);
+          opacity: 0;
+        }
+        100% {
+          transform: translateX(0);
+          opacity: 1;
+        }
+      }
+    }
   }
   .graph-container {
     width: 100%;
