--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,7 +47,7 @@ body {
   }
   h3 {
     font-size: 1.4rem;
-    font-weight: medium;
+    font-weight: normal;
     @include md {
       font-size: 1.5rem;
     }
