Added .env variables

--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -55,7 +55,7 @@
             }
           }
           .error-message {
-            height: 30px;
+            // height: 30px;
             padding-left: 0.5rem;
             font-weight: 600;
             p {
@@ -77,10 +77,13 @@
               border-bottom-color: var(--color-primary);
             }
           }
+          iframe {
+            margin-top: 1rem;
+          }
           #submit {
             border: 1px solid var(--color-primary);
             background-color: transparent;
-            margin-left: auto;
+            // margin-left: auto;
             cursor: pointer;
             color: var(--color-primary);
             font-size: 16px;
