--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,7 +7,7 @@ $color: (
   "background2": #282828,
   "background3": #1d1d1d,
   "text": #909096,
-  "error": #e50000,
+  "error": #eb1414,
 );
 
 :root {
