--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -65,6 +65,7 @@
           }
           input,
           textarea {
+            resize: none;
             border: 0;
             border-bottom: 2px solid transparent;
             transition: all cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.3s;
