--- a/src/pages/Projects/Projects.module.scss
+++ b/src/pages/Projects/Projects.module.scss
@@ -24,8 +24,11 @@
 
     .projects-list {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
       grid-gap: 1.5rem;
+      @include md {
+        grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+      }
     }
   }
 }
