--- a/src/pages/Skills/Skills.module.scss
+++ b/src/pages/Skills/Skills.module.scss
@@ -23,6 +23,12 @@
     margin: 0 auto;
     .text {
       h3 {
+        .check {
+          color: var(--color-primary);
+          outline: 2px solid var(--color-primary);
+          border-radius: 5px;
+          margin-right: 8px;
+        }
         font-size: 1.75rem;
         font-weight: normal;
         text-align: start;
