--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -1,11 +1,11 @@
 // Small tablets and large smartphones
-$screen-sm-min: 520px;
+$screen-sm: 520px;
 
 // Small tablets (portrait view)
-$screen-md-min: 768px;
+$screen-md: 768px;
 
 // Tablets and small desktops
-$screen-lg-min: 1024px;
+$screen-lg: 1024px;
 
 // Large tablets and desktops
-$screen-xl-min: 1440px;
+$screen-xl: 1440px;
