--- a/src/pages/Skills/Skills.module.scss
+++ b/src/pages/Skills/Skills.module.scss
@@ -13,14 +13,15 @@
     flex-direction: row;
   }
   .skills {
-    width: 50%;
     padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 580px;
     margin: 0 auto;
+    @include md {
+      max-width: 580px;
+    }
     .text {
       h3 {
         .check {
@@ -60,10 +61,16 @@
     .tech-stack {
       display: flex;
       justify-content: center;
-      gap: 1rem;
-      img {
-        height: 40px;
-        width: 40px;
+      div {
+        transition: ease-in-out 0.2s;
+        padding: 0.5rem;
+        img {
+          height: 40px;
+          width: 40px;
+        }
+        &:hover {
+          transform: scale(1.5);
+        }
       }
     }
   }
